i18n/fr/docusaurus-plugin-content-docs/version-20/settings/compatibility.md
---
id: compatibility
title: Page Compatibilité
---

La page Compatibilité regroupe les paramètres relatifs au maintien de la compatibilité avec les versions précédentes de 4D.

> ainsi que des paramétrages modifiés dans ce(tte) base/projet.   
> Cette page liste les options de compatibilité disponibles pour les bases/projets converti(e) s depuis 4D v18 et les versions plus récentes. Pour les anciennes options de compatibilité, reportez-vous à la page [Compatibilité](https://doc.4d.com/4Dv20/4D/20.2/Compatibility-page.300-6750362.en.html) sur **doc.4d.com**.

- **Utiliser l'ancienne couche réseau** : à compter de 4D v15, les applications 4D proposent une nouvelle couche réseau, nommée *ServerNet*, pour gérer les communications entre 4D Server et les postes 4D distants (clients). L'ancienne couche réseau devient obsolète, mais est conservée pour assurer la compatibilité des bases existantes. A l'aide de cette option, vous pouvez activer ou désactiver à tout moment l'ancienne couche réseau dans vos applications 4D Server en fonction de vos besoins. *ServerNet* est automatiquement activé dans les nouvelles bases et les bases converties depuis les versions 15 et les versions plus récentes. A noter qu'en cas de modification de l'option, vous devez redémarrer l'application pour que le changement soit pris en compte. Toute application cliente qui était connectée doit également être redémarrée afin de se connecter avec la nouvelle couche réseau. **Note :** Cette option peut également être gérée par programmation via la commande `SET DATABASE PARAMETER`.

- **Utiliser XPath standard** : Par défaut, cette option est décochée pour les bases converties à partir d'une version 4D antérieure à la v18 R3 et est cochée pour les bases créées sous une version 4D v18 R3 ou une version plus récente. A partir de la version 18 R3, l'implémentation de XPath dans 4D a été modifiée pour une meilleure conformité et pour la prise en charge d'un plus grand nombre de prédicats. Par conséquent, les fonctionnalités non standard de l'implémentation antérieure ne fonctionnent plus. Elles incluent :
    * le caractère "/" initial n'est pas seulement le noeud racine - l'utilisation du caractère / comme premier caractère d'une expression XPath ne déclare pas un chemin absolu à partir du noeud racine
    * pas de noeud courant implicite - le noeud courant doit être intégré dans l'expression XPath
    * pas de requêtes récursives dans les structures répétées - seul le premier élément est parsé. \

    Même si ces fonctionnalités ne sont pas standard, vous pouvez continuer de les utiliser afin que votre code continue de fonctionner -- dans ce cas, l'option doit simplement être *décochée*. Par ailleurs, si votre code ne dépend pas de l'implémentation non standard et si vous souhaitez profiter des fonctionnalités XPath avancées dans vos bases (cf. commande [DOM Find XML element](https://doc.4d.com/4dv19R/help/command/en/page864.html)), assurez-vous que l'option **Utiliser XPath standard** est *cochée*.

-   **Utiliser LF comme caractère de fin de ligne sur macOS** : À partir de 4D v19 R2 (et 4D v19 R3 pour les fichiers XML), 4D écrit des fichiers texte avec un saut de ligne ( "line feed" (LF)) comme caractère de fin de ligne ("End Of Line" (EOL)) par défaut au lieu de Retour Chariot ("Carriage Return" CR)) sur macOS dans les nouveaux projets. Si vous souhaitez bénéficier de ce nouveau comportement dans les projets convertis à partir de versions antérieures de 4D, cochez cette option. Voir [TEXT TO DOCUMENT](https://doc.4d.com/4dv19R/help/command/en/page1237.html), [Document to text](https://doc.4d.com/4dv19R/help/command/en/page1236.html), et [XML SET OPTIONS](https://doc.4d.com/4dv19R/help/command/en/page1090.html).

-   **Ne pas ajouter de BOM lors de l'écriture d'un fichier texte unicode par défaut** : À partir de 4D v19 R2 (et 4D v19 R3 pour les fichiers XML), 4D écrit des fichiers texte sans BOM ("Byte order mark") par défaut. Dans les versions antérieures, les fichiers texte étaient écrits avec un BOM par défaut. Sélectionnez cette option si vous souhaitez activer le nouveau comportement dans les projets convertis. Voir [TEXT TO DOCUMENT](https://doc.4d.com/4dv19R/help/command/en/page1237.html), [Document to text](https://doc.4d.com/4dv19R/help/command/en/page1236.html), et [XML SET OPTIONS](https://doc.4d.com/4dv19R/help/command/en/page1090.html).

- **Traduire les NULL en valeurs vides non cochée par défaut à la création d'un champ** : Pour une meilleure conformité avec les spécifications ORDA, dans les bases de données créées avec 4D 19 R4 et ultérieures, la propriété de champ **Traduire les NULL en valeurs vides** est non cochée par défaut lors de la création des champs. Vous pouvez appliquer ce comportement par défaut à vos bases de données converties en cochant cette option (il est recommandé de travailler avec des valeurs Null car elles sont entièrement prises en charge par [ORDA](../ORDA/overview.md).