i18n/fr/docusaurus-plugin-content-docs/version-21/settings/compatibility.md
---
id: compatibility
title: Page Compatibilité
---

La page Compatibilité regroupe les paramètres relatifs au maintien de la compatibilité avec les versions précédentes de 4D.

> Le nombre d'options affichées dépend de la version de 4D avec laquelle la base de données/projet original a été créé, ainsi que des paramétrages modifiés dans cette base/projet.\
> Cette page répertorie les options de compatibilité disponibles pour les bases de données/projets convertis à partir de 4D 18 et suivants.\
> Cette page répertorie les options de compatibilité disponibles pour les bases de données/projets convertis à partir de 4D 18 et suivants.  
> Cette page répertorie les options de compatibilité disponibles pour les bases de données/projets convertis à partir de 4D 18 et suivants. Pour les options de compatibilité plus anciennes, consultez la [page Compatibilité](https://doc.4d.com/4Dv20/4D/20.2/Compatibility-page.300-6750362.en.html) sur **doc.4d.com**.

- **Utiliser l'ancienne couche réseau** : À partir de 4D v15, les applications 4D proposent une nouvelle couche réseau, nommée *ServerNet*, pour gérer les communications entre 4D Server et les postes 4D distants (clients). L'ancienne couche réseau devient obsolète, mais est conservée pour assurer la compatibilité des bases existantes. A l'aide de cette option, vous pouvez activer ou désactiver à tout moment l'ancienne couche réseau dans vos applications 4D Server en fonction de vos besoins. *ServerNet* est automatiquement utilisé pour les nouvelles bases de données et les bases de données converties depuis une version 15 ou ultérieure. A noter qu'en cas de modification de l'option, vous devez redémarrer l'application pour que le changement soit pris en compte. Toute application cliente qui était connectée doit également être redémarrée afin de se connecter avec la nouvelle couche réseau.
  **Note :** Cette option peut également être gérée par programmation en utilisant la commande `SET DATABASE PARAMETER`.

- **Utiliser XPath standard :** Par défaut, cette option est désélectionnée pour les bases converties depuis une version de 4D antérieure à la 18 R3, et est cochée pour les bases créées sous une version 4D 18 R3 ou une version plus récente. A partir de la version 18 R3, l'implémentation de XPath dans 4D a été modifiée pour une meilleure conformité et pour la prise en charge d'un plus grand nombre de prédicats. Par conséquent, les fonctionnalités non standard de l'implémentation antérieure ne fonctionnent plus. Elles incluent :

  - le caractère "/" initial n'est pas seulement le noeud racine - l'utilisation du caractère / comme premier caractère d'une expression XPath ne déclare pas un chemin absolu à partir du noeud racine
  - pas de noeud courant implicite - le noeud courant doit être intégré dans l'expression XPath
  - pas de requêtes récursives dans les structures répétées - seul le premier élément est parsé. \

  Même si ces fonctionnalités ne sont pas standard, vous pourriez vouloir continuer à les utiliser afin que votre code continue de fonctionner comme avant -- dans ce cas, il vous suffit de *désélectionner* l'option. On the other hand, if your code does not rely on the non-standard implementation and if you want to benefit from the extended XPath features in your databases (as described in the [`DOM Find XML element`](../commands-legacy/dom-find-xml-element.md) command), make sure the **Use standard XPath** option is *checked*.

- **Utiliser LF comme caractère de fin de ligne sur macOS :** À partir de 4D 19 R2 (et 4D 19 R3 pour les fichiers XML), 4D écrit les fichiers texte avec un saut de ligne (LF) comme caractère de fin de ligne (EOL) par défaut au lieu de Retour Chariot (CR) (CRLF pour xml SAX) sur macOS dans les nouveaux projets. Si vous souhaitez bénéficier de ce nouveau comportement dans les projets convertis à partir de versions antérieures de 4D, cochez cette option. Voir [`TEXT TO DOCUMENT`](../commands-legacy/text-to-document.md), [`Document to text`](../commands-legacy/document-to-text.md), et [XML SET OPTIONS](../commands-legacy/xml-set-options.md).

- **Ne pas ajouter de BOM lors de l'écriture d'un fichier texte unicode par défaut :** À partir de 4D 19 R2 (et 4D 19 R3 pour les fichiers XML), 4D écrit des fichiers texte sans BOM ("Byte order mark") par défaut. Dans les versions antérieures, les fichiers texte étaient écrits avec un BOM par défaut. Sélectionnez cette option si vous souhaitez activer le nouveau comportement dans les projets convertis. Voir [`TEXT TO DOCUMENT`](../commands-legacy/text-to-document.md), [`Document to text`](../commands-legacy/document-to-text.md), et [XML SET OPTIONS](../commands-legacy/xml-set-options.md).

- **Traduire les NULL en valeurs vides non cochée par défaut à la création d'un champ** : Pour une meilleure conformité avec les spécifications ORDA, dans les bases de données créées avec 4D 19 R4 et versions ultérieures, la propriété de champ **Traduire les NULL en valeurs vides** est non cochée par défaut lors de la création des champs. Vous pouvez appliquer ce comportement par défaut à vos bases de données converties en cochant cette option (il est recommandé de travailler avec des valeurs Null car elles sont entièrement prises en charge par [ORDA](../ORDA/overview.md)).

- **Impression non-bloquante** : À partir de 4D 20 R4, chaque process a ses propres paramètres d'impression (options d'impression, imprimante courante, etc.), ce qui vous permet d'exécuter plusieurs tâches d'impression simultanément. Cochez cette option si vous souhaitez bénéficier de cette nouvelle implémentation dans vos projets 4D convertis ou dans les bases de données converties du mode binaire au mode projet. **Lorsque l'option n'est pas cochée**, l'implémentation précédente est appliquée : les paramètres d'impression 4D courants sont appliqués globalement, l'imprimante passe en mode "occupé" lorsqu'un job d'impression est en cours, vous devez appeler `CLOSE PRINTING JOB` pour que l'imprimante soit disponible pour le prochain job d'impression (consultez la documentation 4D précédente pour plus d'informations).

- **Sauvegarder les couleurs et les coordonnées de la structure dans un fichier catalog_editor.json séparé** : À partir de 4D 20 R5, les modifications apportées dans l'éditeur de Structure concernant l'apparence graphique des tables et des champs (couleur, position, ordre...) sont sauvegardées dans un fichier séparé nommé `catalog_editor.json`, stocké dans le dossier [Sources](../Project/architecture.md#sources) du projet. Cette nouvelle architecture de fichiers facilite la gestion des conflits de fusion dans les applications de gestion de versions (VCS) car le fichier `catalog.4DCatalog` ne contient désormais que les modifications cruciales de la structure de la base de données. Pour des raisons de compatibilité, cette fonctionnalité n'est pas activée par défaut dans les projets convertis à partir des versions précédentes de 4D, vous devez cocher cette option. Lorsque la fonctionnalité est activée, le fichier `catalog_editor.json` est créé lors de la première modification dans l'éditeur de structure.